# AI-Agent-Study

./: .env  pyproject.toml
agentProject/utils/: path_tool.py
app/Agent/: 01Agent.py  02AgentStream.py  03ReAct.py  04AgentMiddleware.py
app/LangChainRAG/: CsvLoader.py  JsonLoader.py  LangChainAiChat.py  LangChainAiChatChain.py  LangChainAiFewShot.py  LangChainAiPrompt.py  LangChainAliTongYi.py  LangChainAliTongYiChat.py  LangChainAliTongYiChat02.py  LangChainAliTongYiDash.py  LangChainAliTongYiStream.py  LangChainJsonOutputParser.py  LangChainMemory.py  LangChainMemoryLong.py  LangChainStrOutputParser.py  LangChainVectorStores.py  LangChainVectorStoresPersistence.py  LangChainVectorStoresPrompt.py  RunableLambdaUse.py  RunnablePassthrough.py  TextLoader.py
app/LangChainRAG/data/: info.csv  stu.csv  stu.json  stu_json_lines.json  stus.json  中水测试用例.txt
app/RAGProject/: app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  rag.py  vector_stores.py
app/bailian/: bailian.py  bailian_agent.py  bailian_prompt_ChatPromptTemplate.py  bailian_prompt_FewShotPromptTemplate.py  bailian_prompt_promptTemplate.py  bailian_tools.py  bailianqwq.py  common.py
