[project]
name = "ai-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain>=0.2.16",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.1.23",
    "openai>=1.30.0",
    "pydantic>=2.6,<2.11",
    "python-dotenv>=1.2.1",
    "pyyaml",
]
